tests/tests/legacy_kustomizations/istio/test_data/expected/networking.istio.io_v1alpha3_virtualservice_google-api-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google-api-vs
  namespace: kubeflow
spec:
  hosts:
    - www.googleapis.com
  tls:
    - match:
        - port: 443
          sniHosts:
            - www.googleapis.com
      route:
        - destination:
            host: www.googleapis.com
            port:
              number: 443
          weight: 100
